# Inline_weather_bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/bot/: bot.py  bot_info.py  dispatcher.py  scheduler.py  settings.py
app/database/core/: arq_redis.py  redis.py
app/database/user/: enums.py  models.py  services.py
app/filters/: role_filters.py
app/handlers/: base.py  capcha.py
app/handlers/admin/: __init__.py  admin_help.py  ban.py  log.py  user_management.py
app/handlers/admin/city/: __init__.py  add.py  arg_to_id.py  delete.py  info.py  json.py  old.py  setting.py
app/handlers/donate/: __init__.py  donate_cmd.py  stars.py
app/handlers/exp/: __init__.py  donate.py  keys.py  premium.py  sch.py  time.py  webapp.py
app/handlers/exp/old/: geo.py  log.json  log.py  log2.py  optimization.py
app/handlers/weather/: __init__.py  callback_inline.py  default_results.py  inline.py  inline_location_callback.py
app/keyboards/: admin.py  base.py  capcha.py  donate.py  horoscope.py  inline.py  inline_location.py  location.py  sending_weather.py
app/middlewares/: NewUserMiddleware.py  capcha.py  throttling.py
app/middlewares/bot_info/: BotInfo.py  LogMiddleware.py  NewUserMiddleware.py
app/services/bot_logging/: OldBotLogger.py
app/services/weather/: FutureWeather.py  Weather.py  city.py  data.py
app/workers/scheduler/: Dockerfile  main.py  scheduler.py  send_weather_to_user.py
resources/weather/: cities.json  main_weather_dict.json
(+24 files in other folders)
