[tool.poetry]
name = "inline-weather-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
emoji = "^2.14.0"
python-weather = "^2.0.7"
requests = "^2.32.3"
apscheduler = "^3.10.4"
redis = "^5.2.0"
arq = "^0.26.1"
orjson = "^3.10.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
mypy = "^1.13.0"
pylint = "^3.3.1"
perflint = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
